Updated README and tested

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,8 +1,8 @@
 [res://Player.gd]
 
 state={
-"bookmarks": [],
-"breakpoints": [],
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 16,
 "folded_lines": [],
 "h_scroll_position": 0,
@@ -15,8 +15,8 @@ state={
 [res://Enemy.gd]
 
 state={
-"bookmarks": [],
-"breakpoints": [],
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 47,
 "folded_lines": [],
 "h_scroll_position": 0,
@@ -29,8 +29,8 @@ state={
 [res://Sign.gd]
 
 state={
-"bookmarks": [],
-"breakpoints": [],
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 12,
 "folded_lines": [],
 "h_scroll_position": 0,
@@ -43,8 +43,8 @@ state={
 [res://TextDisplay.gd]
 
 state={
-"bookmarks": [],
-"breakpoints": [],
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 8,
 "folded_lines": [],
 "h_scroll_position": 0,
@@ -57,8 +57,8 @@ state={
 [res://RaceStartTrigger.gd]
 
 state={
-"bookmarks": [],
-"breakpoints": [],
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 23,
 "folded_lines": [],
 "h_scroll_position": 0,
@@ -71,9 +71,9 @@ state={
 [res://GameEndTrigger.gd]
 
 state={
-"bookmarks": [],
-"breakpoints": [],
-"column": 49,
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
 "folded_lines": [],
 "h_scroll_position": 0,
 "row": 3,
@@ -85,9 +85,9 @@ state={
 [res://RaceTimer.gd]
 
 state={
-"bookmarks": [],
-"breakpoints": [],
-"column": 51,
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 33,
 "folded_lines": [],
 "h_scroll_position": 0,
 "row": 12,
@@ -99,8 +99,8 @@ state={
 [res://RaceEndTrigger.gd]
 
 state={
-"bookmarks": [],
-"breakpoints": [],
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 0,
 "folded_lines": [],
 "h_scroll_position": 0,
